--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.8.2",
